--- a/npm/linux-arm64-musl/package.json
+++ b/npm/linux-arm64-musl/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napi-rs/package-template-linux-arm64-musl",
+  "name": "@lambdragon/lambdragon-rs-package-linux-arm64-musl",
   "version": "1.0.0",
   "os": [
     "linux"
@@ -7,9 +7,9 @@
   "cpu": [
     "arm64"
   ],
-  "main": "package-template.linux-arm64-musl.node",
+  "main": "lambdragon-rs-package.linux-arm64-musl.node",
   "files": [
-    "package-template.linux-arm64-musl.node"
+    "lambdragon-rs-package.linux-arm64-musl.node"
   ],
   "description": "Template project for writing node package with napi-rs",
   "keywords": [
@@ -27,6 +27,5 @@
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
     "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  }
 }
