--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "@napi-rs/package-template",
+  "name": "@lambdragon/lambdragon-rs-package",
   "version": "1.0.0",
-  "description": "Template project for writing node package with napi-rs",
   "main": "index.js",
-  "repository": "git@github.com:napi-rs/package-template.git",
-  "license": "MIT",
-  "keywords": [
-    "napi-rs",
-    "NAPI",
-    "N-API",
-    "Rust",
-    "node-addon",
-    "node-addon-api"
-  ],
   "files": [
     "index.d.ts",
     "index.js"
   ],
   "napi": {
-    "name": "package-template",
+    "name": "lambdragon-rs-package",
     "triples": {
       "defaults": true,
       "additional": [
