--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -170,6 +170,7 @@ jobs:
   build-freebsd:
     runs-on: macos-10.15
     name: Build FreeBSD
+    if: false
     steps:
       - uses: actions/checkout@v2
       - name: Build
@@ -444,7 +445,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     needs:
-      - build-freebsd
+      # - build-freebsd
       - test-macOS-windows-binding
       - test-linux-x64-gnu-binding
       - test-linux-x64-musl-binding
